traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:13: error: ')' expected but 'else' found.
    else if(x ==  largeur - 1)
    ^